crates/tokmd-format/tests/snapshots/format_tests__write_export_cyclonedx_deterministic.snap
---
source: crates/tokmd-format/tests/format_tests.rs
assertion_line: 1707
expression: json
---
{
  "bomFormat": "CycloneDX",
  "components": [
    {
      "group": "src",
      "name": "src/lib.rs",
      "properties": [
        {
          "name": "tokmd:lang",
          "value": "Rust"
        },
        {
          "name": "tokmd:code",
          "value": "100"
        },
        {
          "name": "tokmd:comments",
          "value": "20"
        },
        {
          "name": "tokmd:blanks",
          "value": "10"
        },
        {
          "name": "tokmd:lines",
          "value": "130"
        },
        {
          "name": "tokmd:bytes",
          "value": "1000"
        },
        {
          "name": "tokmd:tokens",
          "value": "250"
        }
      ],
      "type": "file"
    }
  ],
  "metadata": {
    "timestamp": "2024-01-01T00:00:00Z",
    "tools": [
      {
        "name": "tokmd",
        "vendor": "tokmd",
        "version": "1.5.0"
      }
    ]
  },
  "serialNumber": "urn:uuid:12345678-1234-1234-1234-1234567890ab",
  "specVersion": "1.6",
  "version": 1
}
